--- a/Readme
+++ b/Readme
@@ -1,5 +1,5 @@
 # Ex06 BMI Calculator
-## Date:28/10/25
+
 
 ## AIM
 To create a BMI calculator using React Router 
@@ -20,253 +20,451 @@ Classify the BMI result into categories (Underweight, Normal weight, Overweight,
 ### STEP 5 Navigation
 Navigate between pages using React Router.
 
-Home.jsx
+## PROGRAM
 ```
-import React from 'react';
-import { useNavigate } from 'react-router-dom';
+BMI.JSX
+// src/components/BMICalculator.jsx
+import React, { useState, useMemo } from "react";
+import "./styles.css";
 
-function Home() {
-  const navigate = useNavigate();
-  return (
-    <div className="home-container">
-      <h2 className="home-title">Welcome to the BMI Calculator!</h2>
-      <p className="home-description">Click the button below to calculate your Body Mass Index.</p>
-      <button className="start-btn" onClick={() => navigate('/calculator')}>Start</button>
-    </div>
-  );
-}
+export default function BMICalculator() {
+  // units: 'metric' => kg & cm, 'imperial' => lb & inches
+  const [units, setUnits] = useState("metric");
+  const [weight, setWeight] = useState(""); // kg or lb
+  const [height, setHeight] = useState(""); // cm or inches
+  const [error, setError] = useState("");
+  const [touched, setTouched] = useState({ weight: false, height: false });
 
-export default Home;
-```
-BMICalculator.jsx
-```
-import React, { useState } from 'react';
+  // Helper: convert inputs to numeric safely
+  const parseNum = (v) => {
+    if (v === "" || v === null || v === undefined) return NaN;
+    // remove commas and trim
+    return Number(String(v).replace(/,/g, "").trim());
+  };
 
-function BMICalculator() {
-  const [weight, setWeight] = useState('');
-  const [height, setHeight] = useState('');
-  const [bmi, setBmi] = useState('');
-  const [category, setCategory] = useState('');
+  // Compute BMI only when inputs change
+  const { bmi, category, advice } = useMemo(() => {
+    const w = parseNum(weight);
+    const h = parseNum(height);
 
-  const calculate = () => {
-    const h = height / 100;
-    const b = weight / (h * h);
-    setBmi(b.toFixed(2));
-    if (b < 18.5) setCategory('Underweight');
-    else if (b < 25) setCategory('Normal');
-    else if (b < 30) setCategory('Overweight');
-    else setCategory('Obese');
+    if (Number.isNaN(w) || Number.isNaN(h) || w <= 0 || h <= 0) {
+      return { bmi: null, category: null, advice: null };
+    }
+
+    // Convert to kg and meters
+    let kg = w;
+    let meters = h;
+    if (units === "metric") {
+      // weight in kg, height in cm => meters = cm / 100
+      meters = h / 100;
+    } else {
+      // imperial: weight in lb -> kg, height in inches -> meters
+      kg = w * 0.45359237;
+      meters = h * 0.0254;
+    }
+
+    // BMI formula: kg / m^2
+    const rawBmi = kg / (meters * meters);
+    // Round to one decimal place (digit-by-digit care)
+    const rounded = Math.round(rawBmi * 10) / 10;
+
+    // Categories (WHO):
+    // underweight <18.5, normal 18.5–24.9, overweight 25–29.9, obesity >=30
+    let cat = "";
+    let adviceText = "";
+    if (rounded < 18.5) {
+      cat = "Underweight";
+      adviceText = "You are below the healthy weight range. Consider a balanced, calorie-rich diet and check with a healthcare professional.";
+    } else if (rounded < 25) {
+      cat = "Normal";
+      adviceText = "Great — your BMI is in the healthy range. Keep up a balanced diet and regular activity.";
+    } else if (rounded < 30) {
+      cat = "Overweight";
+      adviceText = "You are above the recommended range. Consider adjusting diet and increasing physical activity; consult a professional if needed.";
+    } else {
+      cat = "Obese";
+      adviceText = "BMI indicates obesity. It's advisable to consult a healthcare professional to create a safe weight plan.";
+    }
+
+    return { bmi: rounded, category: cat, advice: adviceText };
+  }, [weight, height, units]);
+
+  // Input validation logic to show helpful errors
+  const validate = () => {
+    setError("");
+    const w = parseNum(weight);
+    const h = parseNum(height);
+    if (Number.isNaN(w) || w <= 0) {
+      setError("Please enter a valid positive weight.");
+      return false;
+    }
+    if (Number.isNaN(h) || h <= 0) {
+      setError("Please enter a valid positive height.");
+      return false;
+    }
+    // realistic limits
+    if (units === "metric") {
+      if (w < 10 || w > 500) {
+        setError("Weight (kg) seems unrealistic. Enter between 10 and 500 kg.");
+        return false;
+      }
+      if (h < 50 || h > 300) {
+        setError("Height (cm) seems unrealistic. Enter between 50 and 300 cm.");
+        return false;
+      }
+    } else {
+      if (w < 22 || w > 1100) {
+        setError("Weight (lb) seems unrealistic. Enter between 22 and 1100 lb.");
+        return false;
+      }
+      if (h < 20 || h > 120) {
+        setError("Height (in) seems unrealistic. Enter between 20 and 120 in.");
+        return false;
+      }
+    }
+    setError("");
+    return true;
+  };
+
+  const handleSubmit = (e) => {
+    e?.preventDefault();
+    setTouched({ weight: true, height: true });
+    if (!validate()) return;
+    // nothing else needed — BMI displayed live
+  };
+
+  const resetForm = () => {
+    setWeight("");
+    setHeight("");
+    setTouched({ weight: false, height: false });
+    setError("");
   };
 
   return (
-    <div className="calculator-container">
-      <h2 className="calculator-title">Calculate Your BMI</h2>
-      <div className="input-container">
-        <input 
-          type="number" 
-          placeholder="Weight (kg)" 
-          value={weight} 
-          onChange={(e) => setWeight(e.target.value)} 
-          className="input"
-        />
-        <input 
-          type="number" 
-          placeholder="Height (cm)" 
-          value={height} 
-          onChange={(e) => setHeight(e.target.value)} 
-          className="input"
-        />
-      </div>
-      <button className="calculate-btn" onClick={calculate}>Calculate</button>
-      {bmi && (
-        <div className="result">
-          <h3>Your BMI: {bmi}</h3>
-          <p>Category: <strong>{category}</strong></p>
+    <div className="bmi-wrap">
+      <form className="bmi-card" onSubmit={handleSubmit} noValidate>
+        <h2 className="bmi-title">BMI Calculator</h2>
+
+        <div className="unit-toggle" role="radiogroup" aria-label="Unit system">
+          <label className={`unit ${units === "metric" ? "selected" : ""}`}>
+            <input
+              type="radio"
+              name="units"
+              value="metric"
+              checked={units === "metric"}
+              onChange={() => setUnits("metric")}
+            />
+            Metric (kg, cm)
+          </label>
+          <label className={`unit ${units === "imperial" ? "selected" : ""}`}>
+            <input
+              type="radio"
+              name="units"
+              value="imperial"
+              checked={units === "imperial"}
+              onChange={() => setUnits("imperial")}
+            />
+            Imperial (lb, in)
+          </label>
         </div>
-      )}
+
+        <div className="fields">
+          <label className="field">
+            <span className="label-text">Weight ({units === "metric" ? "kg" : "lb"})</span>
+            <input
+              inputMode="decimal"
+              pattern="[0-9]*"
+              type="text"
+              value={weight}
+              placeholder={units === "metric" ? "e.g. 70" : "e.g. 154"}
+              onChange={(e) => setWeight(e.target.value)}
+              onBlur={() => setTouched((t) => ({ ...t, weight: true }))}
+              aria-invalid={touched.weight && (weight === "" || Number.isNaN(Number(weight)))}
+            />
+          </label>
+
+          <label className="field">
+            <span className="label-text">Height ({units === "metric" ? "cm" : "in"})</span>
+            <input
+              inputMode="decimal"
+              pattern="[0-9]*"
+              type="text"
+              value={height}
+              placeholder={units === "metric" ? "e.g. 175" : "e.g. 69"}
+              onChange={(e) => setHeight(e.target.value)}
+              onBlur={() => setTouched((t) => ({ ...t, height: true }))}
+              aria-invalid={touched.height && (height === "" || Number.isNaN(Number(height)))}
+            />
+          </label>
+        </div>
+
+        {error && <div className="error" role="alert">{error}</div>}
+
+        <div className="actions">
+          <button type="submit" className="btn primary">Calculate</button>
+          <button type="button" className="btn ghost" onClick={resetForm}>Reset</button>
+        </div>
+
+        <div className="result" aria-live="polite">
+          {bmi === null ? (
+            <p className="result-placeholder">Enter your values and press <strong>Calculate</strong>.</p>
+          ) : (
+            <div className="result-box">
+              <div className="bmi-value">
+                <span className="num">{bmi}</span>
+                <span className="unit-text">kg/m²</span>
+              </div>
+              <div className={`bmi-category ${category ? category.toLowerCase() : ""}`}>
+                <strong>{category}</strong>
+              </div>
+              <p className="advice">{advice}</p>
+            </div>
+          )}
+        </div>
+
+        <div className="help">
+          <p>Note: BMI is a screening tool and doesn't account for muscle mass or distribution. For personalised advice, consult a healthcare professional.</p>
+        </div>
+      </form>
     </div>
   );
 }
-
-export default BMICalculator;
-
 ```
-k.css
 ```
-/* Basic Reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+STYLE.CSS
+/* src/components/styles.css */
+
+/* Basic reset for the component scope */
+* { box-sizing: border-box; }
+body, html, #root { height: 100%; margin: 0; font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
+
+.app-root {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(180deg, #f6f9ff 0%, #fff 50%);
+  padding: 40px 20px;
 }
 
-body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f0f8ff;
+/* Card */
+.bmi-wrap { width: 100%; max-width: 760px; }
+.bmi-card {
+  background: linear-gradient(180deg, #ffffff, #fbfdff);
+  border-radius: 16px;
+  padding: 28px;
+  box-shadow: 0 12px 30px rgba(32, 45, 80, 0.08);
+  border: 1px solid rgba(32,45,80,0.04);
+}
+
+/* Title */
+.bmi-title {
+  margin: 0 0 18px 0;
+  font-size: 1.6rem;
+  color: #21304a;
+  letter-spacing: -0.2px;
+  text-align: center;
+}
+
+/* Unit toggle */
+.unit-toggle {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  margin-bottom: 18px;
+}
+
+.unit {
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  padding: 8px 14px;
+  border-radius: 999px;
+  font-size: 0.95rem;
+  color: #445566;
+  background: transparent;
+  cursor: pointer;
+  border: 1px solid transparent;
+  transition: all 0.2s ease;
+}
+
+.unit input { display: none; }
+
+.unit.selected {
+  background: linear-gradient(90deg, #ff9a9e 0%, #fecfef 100%);
+  color: white;
+  box-shadow: 0 6px 16px rgba(255, 105, 135, 0.12);
+  border: 1px solid rgba(255,255,255,0.16);
+}
+
+/* Fields layout */
+.fields {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 12px;
+  margin-bottom: 12px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.label-text {
+  font-size: 0.9rem;
+  color: #556677;
+}
+
+/* Inputs */
+.field input[type="text"] {
+  padding: 12px 14px;
+  border-radius: 10px;
+  border: 1px solid rgba(35,47,63,0.08);
+  background: linear-gradient(180deg,#fff,#fafcff);
+  font-size: 1rem;
+  outline: none;
+  transition: box-shadow 0.15s ease, transform 0.15s ease;
+}
+
+.field input[type="text"]:focus {
+  box-shadow: 0 6px 18px rgba(34, 124, 255, 0.12);
+  transform: translateY(-1px);
+  border-color: rgba(34,124,255,0.25);
+}
+
+/* Error */
+.error {
+  margin-top: 8px;
+  color: #9b1c1c;
+  background: #fff5f5;
+  border: 1px solid rgba(155,28,28,0.08);
+  padding: 10px 12px;
+  border-radius: 8px;
+  font-size: 0.95rem;
+}
+
+/* Actions */
+.actions {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  margin-top: 12px;
+  margin-bottom: 18px;
+}
+
+.btn {
+  padding: 10px 16px;
+  border-radius: 10px;
+  font-weight: 600;
+  font-size: 0.98rem;
+  cursor: pointer;
+  border: none;
+}
+
+.btn.primary {
+  background: linear-gradient(90deg,#5ab0ff,#6bb6ff);
+  color: white;
+  box-shadow: 0 8px 20px rgba(91,160,255,0.18);
+}
+
+.btn.ghost {
+  background: transparent;
+  color: #445566;
+  border: 1px solid rgba(68,85,102,0.08);
+}
+
+/* Result area */
+.result {
+  margin-top: 6px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
-/* App */
-.app {
-  text-align: center;
-  background-color: #fff;
-  border-radius: 8px;
-  padding: 20px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-  max-width: 500px;
+/* Placeholder */
+.result-placeholder {
+  color: #667788;
+  font-size: 0.98rem;
+}
+
+/* Result box */
+.result-box {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+  background: linear-gradient(90deg, #ffffff, #f7fbff);
+  padding: 14px 18px;
+  border-radius: 12px;
+  border: 1px solid rgba(33,48,74,0.04);
+  box-shadow: 0 8px 24px rgba(32,45,80,0.04);
   width: 100%;
+  max-width: 640px;
 }
 
-.app-title {
-  font-size: 2.5rem;
-  color: #2196f3;
-  margin-bottom: 20px;
+.bmi-value {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 120px;
+  padding-right: 10px;
+  border-right: 1px solid rgba(34,47,63,0.04);
 }
 
-.nav {
-  margin-bottom: 30px;
+.bmi-value .num {
+  font-size: 2.4rem;
+  font-weight: 700;
+  color: #21304a;
+  letter-spacing: -1px;
 }
 
-.nav-link {
+.unit-text {
+  font-size: 0.95rem;
+  color: #667788;
+  margin-top: 4px;
+}
+
+/* Category badge */
+.bmi-category {
   font-size: 1rem;
-  color: #4caf50;
-  margin: 0 10px;
-  text-decoration: none;
-  transition: color 0.3s ease;
+  padding: 8px 12px;
+  border-radius: 999px;
+  background: #eef6ff;
+  color: #1b4f9a;
+  font-weight: 700;
 }
 
-.nav-link:hover {
-  color: #2196f3;
+.bmi-category.underweight { background: #fff7e6; color: #b36b00; }
+.bmi-category.normal { background: #e9fff1; color: #0a7a3a; }
+.bmi-category.overweight { background: #fff5ea; color: #b35700; }
+.bmi-category.obese { background: #fff0f0; color: #a51c1c; }
+
+.advice {
+  color: #445566;
+  margin: 6px 0 0 0;
+  font-size: 0.95rem;
 }
 
-/* Calculator */
-.calculator-container {
-  margin-top: 20px;
-}
-
-.calculator-title {
-  font-size: 2rem;
-  color: #333;
-  margin-bottom: 15px;
-}
-
-.input-container {
-  margin-bottom: 20px;
-}
-
-.input {
-  width: 80%;
-  padding: 10px;
-  font-size: 1rem;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  margin: 5px;
-  transition: border 0.3s;
-}
-
-.input:focus {
-  border: 1px solid #2196f3;
-}
-
-.calculate-btn {
-  padding: 10px 20px;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.calculate-btn:hover {
-  background-color: #45a049;
-}
-
-.result {
-  margin-top: 20px;
-}
-
-.result h3 {
-  font-size: 1.5rem;
-  color: #333;
-}
-
-.result p {
-  font-size: 1.2rem;
-  color: #666;
-}
-
-/* Home */
-.home-container {
+/* Help text */
+.help {
+  margin-top: 14px;
+  color: #7990a6;
+  font-size: 0.9rem;
   text-align: center;
 }
 
-.home-title {
-  font-size: 2.5rem;
-  color: #2196f3;
-  margin-bottom: 15px;
-}
-
-.home-description {
-  font-size: 1.2rem;
-  margin-bottom: 20px;
-}
-
-.start-btn {
-  padding: 12px 25px;
-  background-color: #2196f3;
-  color: white;
-  font-size: 1rem;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.start-btn:hover {
-  background-color: #1976d2;
+/* Responsive */
+@media (max-width: 680px) {
+  .fields { grid-template-columns: 1fr; }
+  .result-box { flex-direction: column; align-items: flex-start; gap: 10px; }
+  .bmi-value { width: 100%; border-right: none; border-bottom: 1px solid rgba(34,47,63,0.04); padding-bottom: 10px; }
 }
 ```
 
-App.jsx
-```
-import React from 'react';
-import { BrowserRouter as Router, Routes, Route, Link } from 'react-router-dom';
-import Home from './Home';
-import BMICalculator from './BMICalculator';
-import k from './k.css';
-
-function App() {
-  return (
-    <Router>
-      <div className="app">
-        <h1 className="app-title">BMI Calculator</h1>
-        <nav className="nav">
-          <Link className="nav-link" to="/">Home</Link>
-          <Link className="nav-link" to="/calculator">Calculator</Link>
-        </nav>
-        <Routes>
-          <Route path="/" element={<Home />} />
-          <Route path="/calculator" element={<BMICalculator />} />
-        </Routes>
-      </div>
-    </Router>
-  );
-}
-
-export default App;
-```
 
 ## OUTPUT
-![image](https://github.com/user-attachments/assets/c57bea7b-0333-4c93-a34a-d8e48e6ee9e2)
-![image](https://github.com/user-attachments/assets/e2d045f1-5c15-4a7c-ad0e-609ecd30f466)
-![image](https://github.com/user-attachments/assets/229ef2c8-c5de-4b5e-9db6-2e1153aceec4)
 
-
+<img width="1913" height="1199" alt="Screenshot 2025-10-29 093758" src="https://github.com/user-attachments/assets/0dc27b6d-7e47-4db5-b938-ea1a2cd00bc6" />
 
 ## RESULT
 The program for creating BMI Calculator using React Router is executed successfully.
